# HM

./: .gitignore  Alter.md  CMakeLists.txt  README.md  src_hm_v1.3.0.rar  test.cpp
ConfigMp_ECRS/resources/: printer_config.json
cert/: cert.crt  key.pem
lib_ibpp/: EcrsPrinter.cpp
lib_ibpp/lib/: httplib.h
lib_ibpp/lib/ibpp/: _dpb.cpp  _ibs.cpp  _rb.cpp  _spb.cpp  _tpb.cpp  array.cpp  blob.cpp  row.cpp  service.cpp  statement.cpp  time.cpp  transaction.cpp  user.cpp
resources/: COMANDA01.txt  COMANDA08.txt  COMANDA09.txt  CUADRE_CAJA_DETALLADO.txt  CUADRE_CAJA_RESUMIDO.txt  LINEACOMANDA.txt  LINEACOMANDAESPACIO.txt  LOGS.bat  PRECUENTA.txt  README.txt  SCRIPT FACTURAS Y NOTAS DE CREDITO.txt  config.json  printer_config.json  printer_config.rar  printer_config2.json
resources/sqlite3/: logs_hm.db  sqliteadmin.exe - Acceso directo.lnk
src/: App.cpp  AppComponent.hpp  ErrorHandler.hpp  InitHelper.hpp  ServiceComponent.hpp  Tools.cpp  Tools.hpp  licencia.cpp  licencia.hpp
src/controller/: AppController.hpp  BasculeController.hpp  PrinterController.hpp
src/cryptography/: Dto.hpp  service.cpp  service.hpp
src/dto/: BasculeDto.hpp  ComandaDto.hpp  ConfigDto.hpp  PrinterConfigDto.hpp  PrinterDto.hpp  StatusDto.hpp
src/lib/: rs232.cpp  rs232.hpp
src/service/: AppService.cpp  AppService.hpp  BasculeService.cpp  BasculeService.hpp  ComandaService.cpp  ComandaService.hpp  PrinterService.cpp  PrinterService.hpp  SerialConnection.cpp  SerialConnection.hpp
src/service/Bascule/: HkaBascule.cpp  HkaBascule.hpp
src/service/Printer/: BematechPrinter.cpp  BematechPrinter.hpp  EcrsPrinter.hpp  HkaPrinter.cpp  HkaPrinter.hpp  NetsoftPrinter.cpp  NetsoftPrinter.hpp  PnpPrinter.cpp  PnpPrinter.hpp  PrinterInterface.cpp  PrinterInterface.hpp  SewooPrinter.cpp  SewooPrinter.hpp  SewooPrinter.rar  VmaxPrinter.cpp  VmaxPrinter.hpp
utility/: install-oatpp-modules.sh
